code/backup/latest version(300423)/patient-details/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: patient-details
  namespace: patient-details
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "127.0.0.1.pd.sslip.io"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: patientdetails-certs
